styles.css
#bar {
	display:block;
	width: 100%;
	background-color:#333;
	overflow:auto;
}

body {
	margin:0;
}

.wrap {
	max-width: 1250px;
	margin: 0 auto;
}

.page-title {
	text-align:center;
	font-size:50px;
	width:75%;
	margin: 0 auto;
	font-family: "Verda";
    	color: #797;
    	font-style: italic;
}

.entry p {
	width: 66%;
	margin: 30px auto 0 auto;
	font-family: sans-serif;
	font-size:22px;
	color:#222;
	line-height:32px;
	font-weight:100;
}

.entry h3 {
	font-family:"Georgia";
	font-size:25px;
	width:85%;
	margin: 15px auto 0 auto;
}

.entry h4 {
	width: 66%;
	margin: 30px auto 0 auto;
	font-family: "Arial";
	font-size:24px;
	color:#111;
	line-height: 32px;
}

.entry img {
	max-width:100%;
}

#logo {
	font-size: 25px;
    font-family: "Lucida Console";
    font-style: italic;
    font-weight: 100;
	color:#eee;
	float: left;
    width: 50%;
}

ul {
	float:right;
	list-style: none;
	margin:0;
	padding:0;
}

li {
	transition: .33s ease;
	float:right;
	padding: 15px 30px;
	color:#eee;
	font:menu;
	font-size:18px;

}

a {
	color:#eee;
	transition: .33s ease;
	text-decoration:none;
}

a:hover{
	color:#e23;
	text-decoration:underline;
}

#logo a:hover{
	color:#eee;
	text-decoration: none;
}

#CV {
	font:menu;
	font-size: 55px;
	padding:50px 0 0 0;
	text-align:center;
}

#CV a:hover{
	color:#eee;
}

